--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
         <link rel="stylesheet" type="text/css" href="design/main.css">
         <link rel="stylesheet" type="text/css" href="design/effects.css">
         <link rel="icon" href="images/cute.png">
+        <!--     Preview aka Embed     -->
+        <meta property="og:image" content="images/cute.png" />
+        <meta property="og:type" content="website">
+        <meta property="og:site_name" content="Muffin">
+        <meta property="og:title" content="Muffin - The Discord bot!" />
+        <meta property="og:description" content="The Friendly Bot. Useful to view Brawl Stars stats and more!" />
         <!---       Libraries        -->
         <link href="https://fonts.googleapis.com/css?family=Archivo+Black&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=B612+Mono&display=swap" rel="stylesheet">
