--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" type="text/css" href="design/effects.css">
         <link rel="icon" href="images/cute.png">
         <!--     Preview aka Embed     -->
-        <meta property="og:image" content="images/cute.png" />
+        <meta property="og:image" content="https://cdn.discordapp.com/attachments/591316012754927620/595933985914224654/cute.png" />
         <meta property="og:type" content="website">
         <meta property="og:site_name" content="Muffin">
         <meta property="og:title" content="Muffin - The Discord bot!" />
