--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta property="og:type" content="website">
         <meta property="og:site_name" content="Muffin">
         <meta property="og:title" content="Muffin - The Discord bot!" />
-        <meta property="og:description" content="The Friendly Bot. Useful to view Brawl Stars stats and more!" />
+        <meta property="og:description" content="The General Discord Bot. Useful to view Brawl Stars stats and more!" />
         <!---       Libraries        -->
         <link href="https://fonts.googleapis.com/css?family=Archivo+Black&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=B612+Mono&display=swap" rel="stylesheet">
