--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <li>
                     <img src='images/mag.png'>
                     <h3>Search</h3>
-                    <p>You can search in imgur, subreddit, giphy and urban using this bot!</p>
+                    <p>You can search in imgur, subreddit and giphy using this bot!</p>
                 </li>
                 <li><img src='images/Stareyes.png'>
                     <h3>and MORE!</h3>
