--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
         <div id="home">
             <h1 class="title">Muffin<img src="images/cute.png" alt="Avatar" class="avatar" align="left"></h1>
-            <h3 class="slogan">The friendly Discord bot!</h3>
+            <h3 class="slogan">The general Discord bot!</h3>
             <a href="https://discordapp.com/oauth2/authorize?client_id=569845238089121793&permissions=20808982958&scope=bot" target="_blank">
             <button class="button"><span>Invite Bot</span></button></a>
             <a href="https://discord.gg/hNWbqQy" target="_blank">
