--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <link href="https://fonts.googleapis.com/css?family=Russo+One&display=swap" rel="stylesheet">
         <script src="script/main.js"></script>
-        <script type="text/javascript" src="discord.11.5.1.js"></script>
+        <script type="text/javascript" src="script/discord.11.5.1.js"></script>
         <!-- For who disable JavaScript -->
         <noscript>
             <style>
