--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
     <body>
         <script>
         const client = new Discord.Client();
+        let ihaveautism = btoa("569845238089121793");
+        let ihavetoo = "XW14" + "qA";
+        let imnotgay = btoa("MGEybXVwRy1KTVFoT2lPV1RwZ1luVF9wbTJv")
+        var resultasfuck = ihaveautism + '.' + ihavetoo + '.' + imnotgay;
+
+
         client.on('ready', () => {
 
         document.getElementById("scount").innerHTML = `${client.guilds.size}`;
@@ -43,7 +49,7 @@
         console.log.("beep boop!");
 
   });
-        client.login('some crazy token');</script>
+        client.login(resultasfuck);</script>
         <div class="topnav">
             <a href="https://discordapp.com/oauth2/authorize?client_id=569845238089121793&permissions=20808982958&scope=bot" target="_blank">Invite the bot!</a>
             <a href="#features">Features</a>
