--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <div class='stats'>
             <h1 id='stats'><a href="#stats">Stats</a></h1>
             <p>The bot has:</p>
-            <p><strong id='scount'></strong> servers and <strong id='ucount'></strong> users!</p>
+            <p><strong id='scount'>0</strong> servers and <strong id='ucount'>0</strong> users!</p>
             
         </div>
         <div class='commands'>
