--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         </noscript>
     </head>
     <body>
+        <!--
         <script>
         const client = new Discord.Client();
         let ihaveautism = btoa("569845238089121793");
@@ -49,7 +50,7 @@
         console.log.("beep boop!");
 
   });
-        client.login(resultasfuck);</script>
+        client.login(resultasfuck);</script> -->
         <div class="topnav">
             <a href="https://discordapp.com/oauth2/authorize?client_id=569845238089121793&permissions=20808982958&scope=bot" target="_blank">Invite the bot!</a>
             <a href="#features">Features</a>
@@ -104,12 +105,14 @@
                 </li>
             </ul>
         </div>
+        <!--
         <div class='stats'>
             <h1 id='stats'><a href="#stats">Stats</a></h1>
             <p>The bot has:</p>
             <p><strong id='scount'>0</strong> servers and <strong id='ucount'>0</strong> users!</p>
             
         </div>
+        -->
         <div class='commands'>
             <h1 id='commands'><a href="#commands">Commands</a></h1>
             <p>This bot has over 80 commands!<img src='images/screenshot.gif' align="left"></p>
